fix header height on smaller screens

--- a/style.css
+++ b/style.css
@@ -1010,7 +1010,6 @@ div.gform_wrapper .gform_footer input[type="submit"] {
 
 #header {
 	background-color: #333;
-	min-height: 160px;
 }
 
 #header .wrap {
